tests/ui/multiple_backends.stderr
error: multiple database backends specified
 --> tests/ui/multiple_backends.rs:3:15
  |
3 | #[dbstruct(db=sled, db=trait)]
  |               ^^^^^^^^^^^^^^
  |
  = help: remove one of the backends
