tests/ui/multiple_backends.rs
use dbstruct::dbstruct;

#[dbstruct(db=sled, db=trait)]
struct Test {
    field: Option<u8>,
}

fn main() {}
